Fixes issue where dragging panel resizer would highlight tag text on Safari

--- a/app/assets/stylesheets/app/_tags.scss
+++ b/app/assets/stylesheets/app/_tags.scss
@@ -51,7 +51,7 @@
     transition: height .1s ease-in-out;
     position: relative;
 
-    > .info {
+    > .tag-info {
       height: 20px;
 
       > .title {
@@ -64,6 +64,14 @@
         cursor: pointer;
         text-overflow: ellipsis;
         width: 75%;
+
+        // Required for Safari to avoid highlighting when dragging panel resizers
+        // Make sure to undo if it's selected (for editing)
+        -webkit-user-select: none;
+
+        &.editing  {
+          -webkit-user-select: text !important;
+        }
 
         pointer-events: none;
       }
@@ -96,8 +104,10 @@
     }
 
     &.selected {
-      > .title {
-        cursor: text;
+      > .tag-info {
+        .title {
+          cursor: text;
+        }
       }
     }
 
